--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,16 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       data-tag="font"
     />
+    <!--This is the head section-->
+    <!-- <style> ... </style> -->
   </head>
   <body>
     <div id="app"></div>
+    <!-- Your body code here -->
+    <!-- <script type="text/javascript"> ... </script> -->
+    <script
+      data-section-id="header"
+      src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
+    ></script>
   </body>
 </html>
